expected/main/lc/unbound-data-type-var.err
ERROR: "/Users/user/Desktop/working/mil-test/actual/main/lc/unbound-data-type-var.llc", line 3
  data T = Just a | Nothing
                ^
The type variable "a" is not in scope

ERROR: Aborting after previously reported error

